使用 Colaboratory 建立

--- a/20230211_python.ipynb
+++ b/20230211_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmDB4QHRaCqqkGSXbo9I71",
+      "authorship_tag": "ABX9TyP3ErK+t/qN9koj0fzvZZEq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,10 +37,67 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "##20230211筆記"
+      ],
       "metadata": {
         "id": "rdnsa86POL_8"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = 1"
+      ],
+      "metadata": {
+        "id": "BGn-qnUJQwb-"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def ron(name):\n",
+        "  print(\"hello\",name)"
+      ],
+      "metadata": {
+        "id": "E1B_SVLZQzJQ"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = ron(\"peter\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z1RY9GMFRTUh",
+        "outputId": "369a1b12-b042-44b9-a30d-cee917aed0be"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello peter\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "p4A9xcAoRfXN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
